[gd_scene load_steps=12 format=3 uid="uid://c3rvg27q7un2v"]

[ext_resource type="PackedScene" uid="uid://3itvhn02h1hy" path="res://scenes/Levels/LevelBase.tscn" id="1_gqleq"]
[ext_resource type="Script" path="res://Scripts/Levels/level_12.gd" id="2_w78h6"]
[ext_resource type="PackedScene" uid="uid://bqqp3t3gyi13u" path="res://scenes/new_worm.tscn" id="3_gy5m4"]
[ext_resource type="Material" uid="uid://0jed1sk6jq5" path="res://assets/GrassMaterial.tres" id="4_0tn7i"]
[ext_resource type="Material" uid="uid://dk0job0vsm27r" path="res://assets/Dirt_Material.tres" id="5_o7j5u"]
[ext_resource type="PackedScene" uid="uid://br1c6x1rx1cy8" path="res://scenes/guillotine.tscn" id="6_01wf1"]
[ext_resource type="PackedScene" uid="uid://b7yhrd8oma55f" path="res://scenes/button_small.tscn" id="7_wgush"]
[ext_resource type="PackedScene" uid="uid://k10usb8384ng" path="res://scenes/fence.tscn" id="8_isryg"]
[ext_resource type="PackedScene" uid="uid://cw0t8ms343grd" path="res://scenes/salt.tscn" id="9_dw8gf"]
[ext_resource type="PackedScene" uid="uid://bce6atjqp6kof" path="res://scenes/finish.tscn" id="10_wje3r"]
[ext_resource type="PackedScene" uid="uid://cf7y1bn8e7jo7" path="res://scenes/spikes.tscn" id="12_ogohh"]

[node name="LevelBase" instance=ExtResource("1_gqleq")]
script = ExtResource("2_w78h6")

[node name="GameOver" parent="." index="5"]
offset_left = 4.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 1.0

[node name="Worm" parent="." index="7" instance=ExtResource("3_gy5m4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.96883, 0.375672, -4.01213)
visible = false
has_crown = true
spawn_points = [Vector3(0, 0, 0), Vector3(0, 0, 1), Vector3(1, 0, 1), Vector3(2, 0, 1)]

[node name="Floor" type="CSGBox3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.7894, -33.5474, -9.14342)
layers = 2
use_collision = true
collision_layer = 18
collision_mask = 2
size = Vector3(8, 67.095, 14.7177)
material = ExtResource("4_0tn7i")

[node name="Walls" type="Node3D" parent="." index="9"]

[node name="ButtonSmall" parent="." index="10" instance=ExtResource("7_wgush")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -2.96514, 9.91821e-05, -5.00554)

[node name="ButtonSmall2" parent="." index="11" instance=ExtResource("7_wgush")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -2.96514, 9.91821e-05, -15.0143)

[node name="ButtonSmall5" parent="." index="12" instance=ExtResource("7_wgush")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.96514, 9.91821e-05, -11.0055)

[node name="ButtonSmall4" parent="." index="13" instance=ExtResource("7_wgush")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -4.96514, 9.91821e-05, -7.00554)

[node name="Fence" parent="." index="14" instance=ExtResource("8_isryg")]
transform = Transform3D(0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, -5.97635, 0.413393, -5.9757)

[node name="Fence2" parent="." index="15" instance=ExtResource("8_isryg")]
transform = Transform3D(-1.96701e-08, 0, -0.45, 0, 0.45, 0, 0.45, 0, -1.96701e-08, -3.94408, 0.480068, -7.01936)

[node name="Fence3" parent="." index="16" instance=ExtResource("8_isryg")]
transform = Transform3D(-0.45, 0, 6.79481e-08, 0, 0.45, 0, -6.79481e-08, 0, -0.45, -2.94906, 0.397002, -8.87414)

[node name="Salt3" parent="." index="17" instance=ExtResource("9_dw8gf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.99198, 9.91821e-05, -7.02633)

[node name="Salt4" parent="." index="18" instance=ExtResource("9_dw8gf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99198, 9.91821e-05, -9.02633)

[node name="Salt7" parent="." index="19" instance=ExtResource("9_dw8gf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.99198, 9.91821e-05, -9.02633)

[node name="Salt5" parent="." index="20" instance=ExtResource("9_dw8gf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.99198, 9.91821e-05, -9.02633)

[node name="Salt6" parent="." index="21" instance=ExtResource("9_dw8gf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.99198, 9.91821e-05, -9.02633)

[node name="Finish" parent="." index="22" instance=ExtResource("10_wje3r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.94137, 0.458316, -13.0015)

[node name="Guillotine" parent="." index="23" instance=ExtResource("6_01wf1")]
transform = Transform3D(0.2, 0, -3.30485e-15, 0, 0.2, 0, 3.30485e-15, 0, 0.2, -4.46682, -0.0151368, -4.99133)
one_way = true

[node name="Guillotine2" parent="." index="24" instance=ExtResource("6_01wf1")]
transform = Transform3D(0.18, 0, -2.97436e-15, 0, 0.18, 0, 2.97436e-15, 0, 0.18, -4.47955, -0.03096, -14.9835)
one_way = true

[node name="LettuceSpawnPosition" type="Node3D" parent="." index="25"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -7)

[node name="LettuceSpawnPosition2" type="Node3D" parent="." index="26"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -10)

[node name="Spikes8" parent="." index="27" instance=ExtResource("12_ogohh")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, -1.49333, 0.259214, -13.136)

[node name="Spikes9" parent="." index="28" instance=ExtResource("12_ogohh")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, -3.4573, 0.259214, -13.136)

[node name="Spikes10" parent="." index="29" instance=ExtResource("12_ogohh")]
transform = Transform3D(-0.5, 0, 4.37114e-08, 0, 0.5, 0, -4.37114e-08, 0, -0.5, -2.47038, 0.259214, -13.136)

[node name="LettuceSpawnPoint" type="Node3D" parent="." index="30"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.762419, -5)

[node name="LettuceSpawnPoint2" type="Node3D" parent="." index="31"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0.762419, -10)

[node name="walls10" type="CSGBox3D" parent="." index="33"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9979, 0.251725, -3.47388)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(1, 0.499512, 1.92676)

[node name="walls16" type="CSGBox3D" parent="." index="34"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.44834, 0.251725, -9.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(1.90088, 0.499512, 1)

[node name="walls17" type="CSGBox3D" parent="." index="35"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9979, 0.251725, -11.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(1, 0.499512, 7)

[node name="walls18" type="CSGBox3D" parent="." index="36"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.86356, 0.251725, -14.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(3.26868, 0.499512, 1)

[node name="walls15" type="CSGBox3D" parent="." index="37"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.44834, 0.251725, -6.04224)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(1.90088, 0.499512, 0.936523)

[node name="walls11" type="CSGBox3D" parent="." index="38"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.89878, -32.8514, -2.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(9, 66.7058, 1)

[node name="walls19" type="CSGBox3D" parent="." index="39"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.94559, 0.251725, -6.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(2.90637, 0.499512, 1)

[node name="walls14" type="CSGBox3D" parent="." index="40"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.898775, -31.3375, -9.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(1, 63.678, 15)

[node name="walls12" type="CSGBox3D" parent="." index="41"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.89878, 0.251725, -9.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(1, 0.499512, 15)

[node name="walls13" type="CSGBox3D" parent="." index="42"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.39878, 0.251725, -16.0105)
material_override = ExtResource("5_o7j5u")
use_collision = true
size = Vector3(8, 0.499512, 1)

[editable path="SceneTransition"]
